jaml/examples/valid/indent_1s.jaml
# Indent: " "
foo:
 a: 1
 b:
  c: 2
  d: 3
bar: 4
