jaml/examples/invalid/inline_map_nl.jaml
inline_map_nl: {
  a: 1, 
  b: 2, 
  c: 3,
}
